<resources>
    <string name="app_name">Mobile Parcel Sample</string>
    <string name="welcome_message">Welcome to the Mobile Dimensioning Demo</string>
    <string name="app_info">This app is designed to capture the dimensions of the length, width and height using the depth sensing hardware and camera on your device.</string>
    <string name="box_ID">BoxID:</string>
    <string name="scan_boxID">Scan or type in your Box ID:</string>
    <string name="start_dimensioning">Start Dimensioning</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="reset_data">RESET</string>
    <string name="state_changes">State changes </string>
    <string name="reset_state">Reset</string>
    <string name="set_dimensioning_parameter">Set Dimension Parameter</string>
    <string name="navigation_drawer_home">Home</string>
    <string name="navigation_drawer_about">About</string>
    <string name="bundle_version">Bundle Version: </string>
    <string name="framework_version">Framework Version: </string>
    <string name="service_version">Service Version: </string>
    <string name="regulatory_approval">"Regulatory Approval: "</string>
    <string name="copyrights">© 2021 Zebra Technologies Corp \n All right reserved.</string>
    <!--to toggle the open close button
    of the navigation drawer-->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <!-- String use to inform SDK crash -->
    <string name="SDK_service_crashed">Dimensioning service crashed</string>
    <string name="dimensioning_service_availability_check">Dimensioning service not available</string>
    <string name="app_version">Application Version: </string>

    <!-- String use to inform about permission -->
    <string name="parcel_config_file_not_found">Parcel configuration file not found</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_not_granted">Permission not granted</string>

    <string name="save_image">Save Image</string>
</resources>