<?xml version="1.0" encoding="utf-8"?>

<!--the root view must be the DrawerLayout-->
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/my_drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false"
        tools:context=".DimensioningClientApp"
        tools:ignore="HardcodedText">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#515050"
            android:orientation="vertical"
            android:weightSum="100"
            tools:context=".DimensioningClientApp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="30"
                android:background="#686767"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/headerTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/welcome_message"
                    android:textColor="#ffffff"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:autoSizeTextType="uniform">

            </TextView>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/app_info"
                    android:textColor="#ffffff"
                    android:textSize="15dp"></TextView>

        </LinearLayout>

        <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:text="@string/scan_boxID"
                android:textColor="#ffffff"
                android:textSize="10dp"
                android:textStyle="bold"></TextView>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_weight="20"
                android:background="#686767"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/box_ID"
                    android:textColor="#ffffff"
                    android:textSize="12dp"></TextView>

            <EditText
                    android:id="@+id/editTextBoxID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="4dp"
                    android:background="@null"
                    android:editable="true"
                    android:focusable="true"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    android:textColorHint="#fff"
                    android:textSize="12dp"
                    tools:ignore="Deprecated"></EditText>

        </LinearLayout>

        <Button
                android:id="@+id/buttonScanBarcode"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="1dp"
                android:text="@string/scan_barcode"
                android:textAllCaps="false"
                android:textSize="18dp"
                app:backgroundTint="#2185D5" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">

            <CheckBox
                    android:id="@+id/checkBoxReportImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:buttonTint="#2185D5"
                    android:checked="false"
                    android:text="@string/save_image"
                    android:textColor="#ffffff"
                    android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:gravity="center|bottom"
                android:orientation="vertical">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="20"
                        android:background="@drawable/control_switch_background_border"
                        android:orientation="horizontal">

                    <TextView
                            android:id="@+id/in"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:width="30px"
                            android:height="30px"
                            android:background="@drawable/selected_inch_bg"
                            android:fontFamily="sans-serif"
                            android:gravity="center"
                            android:lineSpacingMultiplier="1.17"
                            android:text="IN"
                            android:textColor="#FFFFFF"
                            android:textSize="30px"
                            android:visibility="invisible"></TextView>

                    <TextView
                            android:id="@+id/cm"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:width="30px"
                            android:height="30px"
                            android:background="@drawable/unselected_cm_bg"
                            android:fontFamily="sans-serif"
                            android:gravity="center"
                            android:lineSpacingMultiplier="1.17"
                            android:text="CM"
                            android:textColor="#FFFFFF"
                            android:textSize="30px"
                            android:visibility="invisible"></TextView>
                </LinearLayout>

                <TextView
                        android:id="@+id/reset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:background="#515050"
                        android:text="@string/reset_data"
                        android:textColor="@color/white"
                        android:textSize="15dp"
                        android:textStyle="bold"></TextView>

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:gravity="center|bottom"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center|bottom"
                    android:orientation="horizontal">

                <FrameLayout
                        android:id="@+id/frameLayoutLength"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/box"
                        android:orientation="horizontal">

                    <TextView
                            android:id="@+id/lengthTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/box_length"
                            android:textColor="#ffffff"
                            android:textSize="10dp" />

                    <TextView
                            android:id="@+id/lengthTextViewIcon"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_gravity="right|center_vertical"
                            android:layout_marginEnd="3dp" />

                    <TextView
                            android:id="@+id/textViewLength"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_margin="5dp"
                            android:background="@null"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:gravity="center_vertical"
                            android:imeOptions="actionNext"
                            android:textColor="#ffffff"
                            android:textColorHint="#fff"
                            android:textSize="16dp" />

                </FrameLayout>

                <FrameLayout
                        android:id="@+id/frameLayoutWidth"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/box"
                        android:orientation="horizontal"
                        android:padding="1dp">


                    <TextView
                            android:id="@+id/widthTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/box_width"
                            android:textColor="#ffffff"
                            android:textSize="10dp" />


                    <TextView
                            android:id="@+id/widthTextViewIcon"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_gravity="right|center_vertical"
                            android:layout_marginEnd="3dp" />

                    <TextView
                            android:id="@+id/textViewWidth"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_margin="5dp"
                            android:background="@null"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:gravity="center_vertical"
                            android:imeOptions="actionNext"
                            android:textColor="#ffffff"
                            android:textColorHint="#fff"
                            android:textSize="16dp" />

                </FrameLayout>

                <FrameLayout
                        android:id="@+id/frameLayoutHeight"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/box"
                        android:orientation="horizontal"
                        android:padding="1dp">

                    <TextView
                            android:id="@+id/heightTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/box_height"
                            android:textColor="#ffffff"
                            android:textSize="10dp" />

                    <TextView
                            android:id="@+id/heightTextViewIcon"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_gravity="right|center_vertical"
                            android:layout_marginEnd="3dp" />

                    <TextView
                            android:id="@+id/textViewHeight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_margin="5dp"
                            android:background="@null"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:gravity="center_vertical"
                            android:imeOptions="actionNext"
                            android:textColor="#ffffff"
                            android:textColorHint="#fff"
                            android:textSize="16dp" />

                </FrameLayout>
            </LinearLayout>

            <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_gravity="center_horizontal|center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="2dp"
                    android:clickable="false"
                    android:enabled="false"
                    android:singleLine="true"
                    android:text="@string/start_dimensioning"
                    android:textAllCaps="false"
                    android:textSize="18dp"
                    app:backgroundTint="#808080" />
        </LinearLayout>
    </LinearLayout>

    <!--this the navigation view which draws
        and shows the navigation drawer-->
    <!--include the menu created in the menu folder-->
    <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#4C4C4C"
            android:fitsSystemWindows="false"
            app:itemIconTint="@drawable/drawer_item_color"
            app:itemTextColor="@drawable/drawer_item_color"
            app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
